syntax = "proto3";

package coral.sdk.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/coral-mesh/coral/coral/sdk/v1;sdkv1";

// SDK Service for scripts to query Coral data via Unix Domain Socket.
// This replaces the HTTP/JSON API with a type-safe Protobuf interface.
service SDKService {
  // Health check
  rpc Health(HealthRequest) returns (HealthResponse);

  // Database queries
  rpc Query(QueryRequest) returns (QueryResponse);

  // High-level metric helpers (preferred over raw SQL)
  rpc GetPercentile(GetPercentileRequest) returns (GetPercentileResponse);
  rpc GetErrorRate(GetErrorRateRequest) returns (GetErrorRateResponse);

  // Trace queries
  rpc FindSlowTraces(FindSlowTracesRequest) returns (FindSlowTracesResponse);
  rpc CorrelateTraces(CorrelateTracesRequest) returns (CorrelateTracesResponse);

  // System metrics
  rpc GetSystemMetrics(GetSystemMetricsRequest) returns (GetSystemMetricsResponse);

  // Event emission
  rpc Emit(EmitRequest) returns (EmitResponse);

  // Level 3: Dynamic eBPF instrumentation (requires elevated permissions)
  rpc AttachUprobe(AttachUprobeRequest) returns (stream UprobeEvent);
  rpc AttachKprobe(AttachKprobeRequest) returns (stream KprobeEvent);
  rpc DetachProbe(DetachProbeRequest) returns (DetachProbeResponse);
}

// Health check messages
message HealthRequest {}

message HealthResponse {
  string status = 1;
  int64 active_requests = 2;
  ConnectionPoolStats db_stats = 3;
  ResourceUsage resource_usage = 4;
}

message ConnectionPoolStats {
  int32 open_connections = 1;
  int32 in_use = 2;
  int32 idle = 3;
  int32 max_open = 4;
}

message ResourceUsage {
  double cpu_percent = 1;      // CPU usage of Deno subsystem
  int64 memory_bytes = 2;       // Memory usage of all scripts
  int32 active_scripts = 3;     // Number of running scripts
}

// Query messages (raw SQL fallback)
message QueryRequest {
  string sql = 1;

  // Automatic guardrails (applied unless explicitly disabled)
  bool disable_limit_injection = 2;      // Default: auto-inject LIMIT 10000
  bool disable_time_filter_injection = 3; // Default: auto-inject WHERE timestamp > now() - 1h

  // Query metadata
  string script_id = 4;
  QueryType query_type = 5;
}

enum QueryType {
  QUERY_TYPE_UNSPECIFIED = 0;
  QUERY_TYPE_ADHOC = 1;    // One-time query (60s timeout)
  QUERY_TYPE_DAEMON = 2;   // Continuous query (24h max)
}

message QueryResponse {
  repeated Row rows = 1;
  int32 count = 2;
  bool truncated = 3;
  QueryStats stats = 4;
}

message Row {
  // Column name â†’ value mapping
  map<string, Value> columns = 1;
}

message Value {
  oneof value {
    string string_value = 1;
    int64 int_value = 2;
    double double_value = 3;
    bool bool_value = 4;
    google.protobuf.Timestamp timestamp_value = 5;
  }
}

message QueryStats {
  google.protobuf.Duration execution_time = 1;
  int64 rows_scanned = 2;
  int64 bytes_scanned = 3;
  bool guardrails_applied = 4;  // True if LIMIT or time filter was auto-injected
}

// Percentile messages
message GetPercentileRequest {
  string service = 1;
  string metric = 2;
  double percentile = 3;  // 0.0 - 1.0
  google.protobuf.Duration time_window = 4;  // Default: 5 minutes
}

message GetPercentileResponse {
  double value = 1;
  string unit = 2;  // "nanoseconds", "milliseconds", etc.
  QueryStats stats = 3;
}

// Error rate messages
message GetErrorRateRequest {
  string service = 1;
  google.protobuf.Duration time_window = 2;  // Default: 5 minutes
}

message GetErrorRateResponse {
  double error_rate = 1;  // 0.0 - 1.0
  int64 total_requests = 2;
  int64 error_requests = 3;
  QueryStats stats = 4;
}

// Trace query messages
message FindSlowTracesRequest {
  string service = 1;
  google.protobuf.Duration min_duration = 2;  // e.g., "500ms"
  google.protobuf.Duration time_range = 3;     // e.g., "1h"
  int32 limit = 4;  // Default: 100, max: 10000
}

message FindSlowTracesResponse {
  repeated Trace traces = 1;
  int32 total_count = 2;
  QueryStats stats = 3;
}

message Trace {
  string trace_id = 1;
  string span_id = 2;
  string service_name = 3;
  int64 duration_ns = 4;
  bool is_error = 5;
  int32 http_status = 6;
  string http_method = 7;
  string http_route = 8;
  google.protobuf.Timestamp start_time = 9;
  map<string, string> attributes = 10;
}

message CorrelateTracesRequest {
  string trace_id = 1;
  repeated string services = 2;  // Services to correlate with
}

message CorrelateTracesResponse {
  repeated Trace related_traces = 1;
  repeated Correlation correlations = 2;
  QueryStats stats = 3;
}

message Correlation {
  string from_service = 1;
  string to_service = 2;
  string correlation_type = 3;  // "http", "grpc", "queue", etc.
  int64 latency_ns = 4;
}

// System metrics messages
message GetSystemMetricsRequest {
  repeated string metric_names = 1;  // "cpu", "memory", "disk", "network"
}

message GetSystemMetricsResponse {
  map<string, SystemMetric> metrics = 1;
  QueryStats stats = 2;
}

message SystemMetric {
  double value = 1;
  string unit = 2;
  google.protobuf.Timestamp timestamp = 3;
}

// Event emission messages
message EmitRequest {
  string name = 1;     // Event type: "alert", "metric", "correlation"
  map<string, Value> data = 2;
  string severity = 3;  // "info", "warning", "error", "critical"

  // Metadata
  string script_id = 4;
  google.protobuf.Timestamp timestamp = 5;
}

message EmitResponse {
  bool success = 1;
  string event_id = 2;  // For tracking
}

// Dynamic instrumentation messages (Level 3)

message AttachUprobeRequest {
  string service_name = 1;
  string function_name = 2;  // e.g., "main.ProcessPayment"

  // Probe configuration
  ProbeConfig config = 3;

  // Permissions
  string authorization_token = 4;  // Required for Level 3 operations
}

message AttachKprobeRequest {
  string kernel_function = 1;  // e.g., "sys_open"

  // Probe configuration
  ProbeConfig config = 2;

  // Permissions
  string authorization_token = 3;
}

message ProbeConfig {
  // What to capture
  bool capture_args = 1;
  bool capture_return = 2;
  bool capture_stack_trace = 3;

  // Sampling
  int32 sample_rate = 4;  // 1 = every event, 100 = 1 in 100

  // Filters
  repeated ProbeFilter filters = 5;
}

message ProbeFilter {
  string field = 1;  // "pid", "uid", "arg0", etc.
  string operator = 2;  // "==", "!=", ">", "<", "contains"
  string value = 3;
}

message UprobeEvent {
  google.protobuf.Timestamp timestamp = 1;
  int32 pid = 2;
  int32 tid = 3;
  string function_name = 4;

  // Captured data
  repeated Argument args = 5;
  Argument return_value = 6;
  repeated string stack_trace = 7;

  int64 duration_ns = 8;  // If return probe attached
}

message KprobeEvent {
  google.protobuf.Timestamp timestamp = 1;
  int32 pid = 2;
  int32 tid = 3;
  string kernel_function = 4;

  // Captured data
  repeated Argument args = 5;
  Argument return_value = 6;
  repeated string stack_trace = 7;
}

message Argument {
  string name = 1;
  string type = 2;
  string value = 3;
}

message DetachProbeRequest {
  string probe_id = 1;  // Returned from Attach*Probe
}

message DetachProbeResponse {
  bool success = 1;
}
